# kvasir

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  FindFreetype.cmake
kvasir/: CMakeLists.txt  kv-include.h  kvasir-eng-include.h  kvasir-engine.h
kvasir/lib/bullet3/: CMakeLists.txt
kvasir/lib/bullet3/build_cmake/: BulletConfig.cmake
kvasir/lib/bullet3/src/LinearMath/: btQuaternion.h
kvasir/lib/galg/: galg.h  galg_ops.cpp  galg_ops.h
kvasir/lib/glad/: glad.c
kvasir/lib/glad/include/glad/: glad.h
kvasir/lib/glfw/: CMakeLists.txt
kvasir/lib/glfw/src/: glfw_config.h
kvasir/lib/kv-text/: CMakeLists.txt  text-img-render.cpp  text-img-render.h
kvasir/lib/lodepng/: lodepng.cpp  lodepng.h
kvasir/src/: camera.h  config.h  fps-manager.h  kvasir-engine.cpp  kvasir-engine.h  opengl.h
kvasir/src/mesh/: mesh.h
kvasir/src/physics/: bullet-physics3d.cpp  bullet-physics3d.h  physics.cpp  physics.h
kvasir/src/render-base/: buffer.cpp  buffer.h  font-renderer.cpp  font-renderer.h  gl-renderer.cpp  gl-renderer.h  glfw-window.cpp  glfw-window.h  opengl.cpp  opengl.h  render-buffer.cpp  render-buffer.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h
kvasir/src/renderers/: gl-renderer.cpp  gl-renderer.h  renderer.cpp  renderer.h  terminal-renderer.cpp  terminal-renderer.h  vulkan-renderer.cpp  vulkan-renderer.h
kvasir/src/utils/: common-ops.cpp  common-ops.h  data.cpp  data.h  exception.h  fps-manager.cpp  fps-manager.h  galg-dllexport.h  input.cpp  input.h  memory-aid.h  rel-paths.h
kvasir/src/world/: camera.cpp  camera.h  game-object.cpp  game-object.h  material.cpp  material.h  mesh.cpp  mesh.h  physics3d.cpp  physics3d.h  position.cpp  position.h
res/: test.krc
tests/: global-tests.cpp  k2d-tests.cpp  shared-lib-test.cpp  terminal-test.cpp
tests/engine-2d/: CMakeLists.txt  main.cpp
tests/engine-3d-phys/: CMakeLists.txt  main.cpp
tests/engine-3d-phys/kvasir-engine/bullet3/: BulletConfig.cmake
tests/engine-terminal/: CMakeLists.txt  main.cpp
tests/font-rendering/: CMakeLists.txt  main.cpp
tests/vulkan-2d/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt  build-windows.bat  compile_include_file.sh  linux-install-build-tools.sh  linux_install_build_tools.sh  osx-install-build-tools.sh  resource-bundler.cpp  windows-build-tools.txt  windows_build_tools.txt
tools/kv-resource-pack/: CMakeLists.txt  krc-packer.cpp  krc-packer.h  main.cpp
